--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -73,9 +73,14 @@
         <div class="card">
             <div class="card-header d-flex justify-content-between align-items-center">
                 <h5 class="mb-0">Training Dataset</h5>
-                <button id="btn-select-training" class="btn btn-primary">
-                    <i class="bi bi-folder-plus"></i> Select Training Images
-                </button>
+                <div>
+                    <button id="btn-reset-dataset" class="btn btn-outline-danger me-2">
+                        <i class="bi bi-trash"></i> Reset
+                    </button>
+                    <button id="btn-select-training" class="btn btn-primary">
+                        <i class="bi bi-folder-plus"></i> Select Training Images
+                    </button>
+                </div>
             </div>
             <div class="card-body">
                 <div class="alert alert-info">
